# migrate

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  REPORT.md  config.json  crawl.py  diff.py  main.rs  prompt.txt  pypi.sh  pypi.txt  urls.txt
.agents/skills/bazel/: SKILL.md
data/: diff.json
data/about/: diff.json
data/basics/: diff.json
data/basics/artifact-based-builds/: diff.json
data/basics/hermeticity/: diff.json
data/basics/task-based-builds/: diff.json
data/community/: diff.json
data/community/experts/: diff.json
data/community/partners/: diff.json
data/community/recommended-rules/: diff.json
data/community/users/: diff.json
data/concepts/: diff.json
data/concepts/build-files/: diff.json
data/concepts/build-ref/: diff.json
data/concepts/dependencies/: diff.json
data/concepts/labels/: diff.json
data/configure/best-practices/: diff.json
data/configure/integrate-cpp/: diff.json
data/configure/windows/: diff.json
data/contribute/: diff.json
data/contribute/breaking-changes/: diff.json
data/contribute/design-documents/: diff.json
data/contribute/docs-style-guide/: diff.json
data/contribute/policy/: diff.json
data/contribute/release-notes/: diff.json
data/docs/android-build-performance/: diff.json
data/docs/android-ndk/: diff.json
data/docs/cc-toolchain-config-reference/: diff.json
data/docs/mobile-install/: diff.json
data/docs/user-manual/: diff.json
data/extending/: diff.json
data/reference/: diff.json
data/release/: diff.json
data/rules/: diff.json
data/start/: diff.json
(+172 files in other folders)
