bazel_dep(name = "rules_python", version = "1.9.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.12",
    requirements_lock = "//:pypi.lock",
)
use_repo(pip, "pypi")

bazel_dep(name = "aspect_bazel_lib", version = "2.13.0")
bazel_dep(name = "rules_playwright", version = "0.5.3")

playwright = use_extension("@rules_playwright//playwright:extensions.bzl", "playwright")
playwright.repo(
    name = "playwright",
    playwright_version = "1.46.0",
)
use_repo(playwright, "playwright")
